# qt_demo_in_vscode

./: CMakeLists.txt  README.md
